<package>
  <name>marti_can_msgs</name>
  <version>0.0.1</version>
  <description>

     marti_can_msgs

  </description>
  <author>Elliot Johnson</author>
  <maintainer email="elliot.johnson@swri.org">Elliot Johnson</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_messages</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>build_tools</build_depend>
  
  <run_depend>message_runtime</run_depend>
  
</package>


