<package format="2">
  <name>marti_can_msgs</name>
  <version>0.12.1</version>
  <description>

     marti_can_msgs

  </description>
  <author>Elliot Johnson</author>
  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_messages</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>


