<?xml version="1.0" ?>
<package format="3">
  <name>marti_dbw_msgs</name>
  <version>1.3.0</version>
  <description>

     marti_dbw_msgs

  </description>
  <maintainer email="mbries@swri.org">Matthew Bries</maintainer>
  <url type="repository">https://github.com/swri-robotics/marti_messages</url>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

