<package format="2">
  <name>marti_introspection_msgs</name>
  <version>0.10.0</version>
  <description>

     marti_introspection_msgs

  </description>
  <author>Matthew Bries</author>
  <maintainer email="mbries@swri.org">Matthew Bries</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_messages</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>

