<package format="2">
  <name>marti_nav_msgs</name>
  <version>0.12.0</version>
  <description>

     marti_nav_msgs

  </description>
  <author>Marc Alban</author>
  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_messages</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>marti_common_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
