<package>
  <name>marti_perception_msgs</name>
  <version>0.0.1</version>
  <description>

     marti_perception_msgs

  </description>
  <author>Edmond DuPont</author>
  <maintainer email="edupont@swri.org">Edmond DuPont</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_messages</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>build_tools</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
</package>

